--- a/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
+++ b/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
@@ -101,7 +101,7 @@ CloudForms Management Engine 5.5 removes the following gem from the core set of 
 
 === New Ruby Gem in CloudForms Management Engine 5.5
 
-CloudForms Management Engine 5.5 adds the following new gem to the core set of Ruby gems included in the appliance:
+CloudForms Management Engine 5.5 adds the following new gems to the core set of Ruby gems included in the appliance:
 
 [cols="1,1", frame="all", options="header"]
 |===
