Minor edits to the section on Ruby gems as part of peer review:
* Made references to gems plural in two instances in titles in
  this section of the Release Notes.

--- a/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
+++ b/doc-Release_Notes/changes_in_the_core_set_of_ruby_gems.adoc
@@ -14,7 +14,7 @@ To get lists of all gems for different CloudForms Management Engine releases, se
 
 * https://access.redhat.com/articles/1534753
 
-=== Removed Ruby Gem in CloudForms Management Engine 5.5
+=== Removed Ruby Gems in CloudForms Management Engine 5.5
 
 CloudForms Management Engine 5.5 removes the following gem from the core set of Ruby gems included in the appliance:
 
@@ -99,7 +99,7 @@ CloudForms Management Engine 5.5 removes the following gem from the core set of 
 |1.4.15
 |===
 
-=== New Ruby Gem in CloudForms Management Engine 5.5
+=== New Ruby Gems in CloudForms Management Engine 5.5
 
 CloudForms Management Engine 5.5 adds the following new gems to the core set of Ruby gems included in the appliance:
 
