Minor edits to the scripting actions guide during peer review.

--- a/doc-Scripting_Actions_in_CloudForms/topics/Creating_a_Dynamic_Content_Dialog.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/Creating_a_Dynamic_Content_Dialog.adoc
@@ -7,10 +7,12 @@ The procedure describes the steps to create a dynamic content dialog.
 . From the accordion menu, click `DOMAIN` -> `Cloud` -> `VM` -> `Operations` -> `Methods`.
 
 +
-.NOTE
+[NOTE]
+======
 DOMAIN must be a user-defined Domain and not the locked ManageIQ Domain.
 If necessary, you can copy the class from the ManageIQ domain into a
 custom domain.
+======
 +
 This example uses the `Cloud` Namespace but can also use the
 `Infrastructure` namespace.
@@ -34,7 +36,7 @@ image:../images/2361.png[image] (`Add a new Instance`).
 
 . Set the automate entry point for the dialog control; use the new
 instance created in step four. You can create a new domain and copy the method to that domain.
-
++
 ---------------------
 #  Automate Method
 
@@ -55,3 +57,5 @@ dialog_field["data_type"] = "integer"
 dialog_field["values"] = {1 => "one", 2 => "two", 10 => "ten", 50 => "fifty"}
 dialog_field["default_value"] = 2
 ---------------------
++
+
