--- a/doc-Scripting_Actions_in_CloudForms/topics/Initiating_Automate_from_an_Event1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/Initiating_Automate_from_an_Event1.adoc
@@ -1,4 +1,4 @@
-==== Initiating Automate from an Event
+=== Initiating Automate from an Event
 
 You can also use a CloudForms Management Engine Policy Event to initiate automation. You can either use the provided Raise Automation Event action or create a custom automation action. The first case will start in the `/System/Process` class, but then go to the Event that initiated the Automate model in the `/System/Process/Event Class`. If you create your own custom action, it will start from the `/System/Process` class and then go to the `/System/Process/Request Class` instead.
 
