--- a/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_Policy_for_Automate1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_Policy_for_Automate1.adoc
@@ -1,4 +1,4 @@
-==== Creating a Policy for Automate
+=== Creating a Policy for Automate
 
 This procedure shows you how to create a policy for automate.
 
@@ -33,11 +33,12 @@ Event`).
 
 . Click `Save`.
 
-_Result:_. +
 You can now assign this policy to a `Policy Profile`. Then, assign the policy profile to the virtual machines. Every time this event happens on the virtual machine the appropriate Automate Model will be initiated.
 
-.NOTE
+[NOTE]
+======
 If you want the policy to initiate an Automate Model from the
 `/System/Process/Request` class, then you can create your own custom
 action. Be sure to have an instance in the `/System/Process/Request`
 class for it to map to.
+======
