--- a/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_class1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_class1.adoc
@@ -13,12 +13,11 @@ the new class inherits from changes, the new class will also change.
 
 . Click `Add`.
 
-_Result:_. +
-The new class is created and you can create a schema, add instances and
-methods.
+The new class is created and you can create a schema, add instances and methods.
 
-.NOTE
-
+[NOTE]
+======
 For each class, create a schema if you did not choose to inherit from an
 existing class. The schema can include attributes, methods, assertions,
 and relationships.
+======
