--- a/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_custom_Automate_Action1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_custom_Automate_Action1.adoc
@@ -1,4 +1,4 @@
-==== Creating a Custom Automate Action
+=== Creating a Custom Automate Action
 
 This procedure shows you how to create a custom Automate action.
 
@@ -23,5 +23,4 @@ image:../images/1848.png[image] (`Add a new Action`).
 
 . Click `Add`.
 
-_Result:_. +
 The action is created and can be added to a policy.
