--- a/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_custom_button1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_custom_button1.adoc
@@ -14,9 +14,10 @@ This procedure shows you how to create a custom button.
 . Click image:../images/1847.png[image](`Configuration`), then
 image:../images/1848.png[image] (`Add a new Button`).
 +
-.NOTE
+[NOTE]
+======
 If image:../images/1848.png[image] (Add a new Button) is not available, that means you have not created a button group for that object. To continue, create a button group first. See <<create-custom-button-group>>
-
+======
 . In `Action`, type in a `Button Text` and `Button Hover Text`, and select the `Button Image` you want to use.
 
 . Select a `Dialog` if applicable.
@@ -31,5 +32,4 @@ If image:../images/1848.png[image] (Add a new Button) is not available, that mea
 
 . Click `Add` when you have confirmed that the button accomplishes the task you want.
 
-_Result:_. +
 The button will show in the object type you added the button to.
