--- a/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_schema_for_a_class1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/To_create_a_schema_for_a_class1.adoc
@@ -40,11 +40,11 @@ fields values.
 
 . When you have created all of the fields, click `Save`.
 
-_Result:_. +
 The class schema is created, and you can now add instances to it.
 
-.NOTE
-
+[NOTE]
+======
 You may need to edit a class schema to reorder, add, edit, or remove a
 field. Classes define the order in which fields are processed and you
 may need to process some items before others.
+======
