--- a/doc-Scripting_Actions_in_CloudForms/topics/To_edit_a_field_in_a_schema1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/To_edit_a_field_in_a_schema1.adoc
@@ -17,6 +17,4 @@ image:../images/1851.png[image] (`Edit selected Schema`).
 
 . Click `Save` when you are finished editing the schema.
 
-_Result:_. +
-Once the schema is created, you can add instances and methods to the
-class.
+Once the schema is created, you can add instances and methods to the class.
