--- a/doc-Scripting_Actions_in_CloudForms/topics/Automate_Model2.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/Automate_Model2.adoc
@@ -52,12 +52,13 @@ systems.
 You can copy classes and instances from locked Domains into your own
 custom domains.
 
-.NOTE
-
+[NOTE]
+======
 Red Hat does not recommend changing any of the existing classes or
 instances shipped with the product as this may hinder the operation of
 the CloudForms Management Engine. You can link to these methods using
 relationships.
+======
 
 To reset the Automate model to default settings, navigate to
 *Automate* -> *Import/Export* and click the *Reset* option.
