--- a/doc-Monitoring_Alerts_and_Reporting/appe-Regular_Expressions.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/appe-Regular_Expressions.adoc
@@ -20,6 +20,8 @@ Note that if you want to search a file, you must collect it as part of a host an
 					
 |
 
+&#160;
+
 | 
 						
 							^
@@ -48,6 +50,8 @@ Note that if you want to search a file, you must collect it as part of a host an
 						
 					
 |
+
+&#160;
 
 | 
 						
@@ -162,6 +166,8 @@ Note that if you want to search a file, you must collect it as part of a host an
 					
 |
 
+&#160;
+
 | 
 						
 							\
@@ -180,9 +186,11 @@ Note that if you want to search a file, you must collect it as part of a host an
 					
 |
 
+&#160;
+
 | 
 						
-							^ [ . $ { * ( \ + ) | ? < >
+							^ [ . $ { * ( \ + ) \| ? < >
 						
 					
 | 
@@ -197,6 +205,8 @@ Note that if you want to search a file, you must collect it as part of a host an
 						
 					
 |
+
+&#160;
 
 | 
 						
@@ -227,6 +237,8 @@ Note that if you want to search a file, you must collect it as part of a host an
 					
 |
 
+&#160;
+
 | 
 						
 							.
@@ -240,7 +252,7 @@ Note that if you want to search a file, you must collect it as part of a host an
 
 | 
 						
-							(a|b)
+							(a\|b)
 						
 					
 | 
@@ -322,6 +334,8 @@ Note that if you want to search a file, you must collect it as part of a host an
 					
 |
 
+&#160;
+
 | 
 						
 							i
@@ -339,6 +353,8 @@ Note that if you want to search a file, you must collect it as part of a host an
 						
 					
 |
+
+&#160;
 
 | 
 						
@@ -450,7 +466,7 @@ Note that if you want to search a file, you must collect it as part of a host an
 					
 | 
 						
-							^sshd:[^:]*:[^:]*:[^:]*:99999:
+							\^sshd:[^:]\*:[\^:]*:[^:]*:99999:
 						
 						
 					
@@ -462,7 +478,7 @@ Note that if you want to search a file, you must collect it as part of a host an
 					
 | 
 						
-							^\s*PASS_MAX_DAYS\s+([0-9]|[1-8][0-9]|90)
+							^\s*PASS_MAX_DAYS\s+([0-9]\|[1-8][0-9]\|90)
 						
 					
 
@@ -484,7 +500,7 @@ Note that if you want to search a file, you must collect it as part of a host an
 					
 | 
 						
-							^\s*size\s+(409[0-6]|40[0-8][0-9]|[123][09]{3}|\d{1,3})k
+							^\s*size\s+(409[0-6]\|40[0-8][0-9]\|[123][09]{3}\|\d{1,3})k
 						
 					
 
