--- a/doc-Monitoring_Alerts_and_Reporting/Reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/Reports.adoc
@@ -23,54 +23,12 @@ Each category has its own set of subfolders.
 
 For a complete list of Reportable Fields in CloudForms Management Engine, see appendix https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/Insight_Guide/appe-Reportable_Fields_in_CloudForms_Management_Engine.html[Reportable Fields in CloudForms Management Engine] in the https://access.redhat.com/documentation/en-US/Red_Hat_CloudForms/4.0/html/Insight_Guide/index.html[Red Hat CloudForms 4.0 Insight Guide]. 
 
-[[_sect_running_reports]]
-== Running Reports
-
-There are two different ways to generate a report: either scheduling the report, or manually by clicking the report generation button on the [label]#Reports# page.
-CloudForms Management Engine uses interactive report generation so that reports are placed on a queue.
-A visual indicator of the reports status is shown.
-All reports are automatically saved so that they can be downloaded and analyzed later. 
-
-:leveloffset: 3
-include::topics/To_generate_a_single_report.adoc[]
+:leveloffset: 2
+include::running_reports.adoc[]
 :leveloffset: 0
 
-:leveloffset: 3
-include::topics/To_schedule_a_Report.adoc[]
-:leveloffset: 0
-
-:leveloffset: 3
-include::topics/To_modify_a_report_schedule.adoc[]
-:leveloffset: 0
-
-:leveloffset: 3
-include::topics/To_run_a_scheduled_report_immediately.adoc[]
-:leveloffset: 0
-
-[[_sect_viewing_reports]]
-== Viewing Reports
-
-Once you have created a schedule for a report, you can view it at any time after the first scheduled time has occurred. 
-
-.Procedure: To View a Report
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the [label]#Saved Reports# accordion or the [label]#Reports# accordion. 
-. Click on the instance of the report you want to view. 
-
-:leveloffset: 3
-include::topics/Changing_Report_Views.adoc[]
-:leveloffset: 0
-
-:leveloffset: 3
-include::topics/Report_Download_Buttons.adoc[]
-:leveloffset: 0
-
-:leveloffset: 3
-include::topics/Downloading_a_Report.adoc[]
-:leveloffset: 0
-
-:leveloffset: 3
-include::topics/Showing_a_Report_in_Full_Screen.adoc[]
+:leveloffset: 2
+include::viewing_reports.adoc[]
 :leveloffset: 0
 
 :leveloffset: 2
@@ -97,34 +55,7 @@ include::topics/To_import_a_report.adoc[]
 include::topics/To_export_a_report.adoc[]
 :leveloffset: 0
 
-[[_sect_report_menus]]
-== Report Menus
-
-By default, all account roles have the same reports available.
-If you have the super administrator or administrator role, you can customize the accordions, the folders within them, and the locations of your reports. 
-
-NOTE: When you create your own report, the report is not automatically available.
-You must add it to a report menu. 
-
-The report menu is a hierarchical structure that consists of the following components: 
-
-* The [label]#Top Level# under which the accordions are shown.
-  ([label]#Top Level# is only displayed when you are in the report menu editor.)  					
-* Accordions that are general categories for the reports.
-  The defaults supplied are [label]#Configuration Management#, [label]#Migration Readiness, Operations#, [label]#VM Sprawl#, [label]#Relationships#, and [label]#Events#.
-* Folders that are used to further organize reports within an accordion.
-  For example, under the [label]#Configuration Management#, you would see folders for virtual machines, hosts, and other virtual infrastructure components. 
-* Reports that are stored directly in the folders. 
-
-:leveloffset: 3
-include::topics/To_manage_Report_Menu_Accordions.adoc[]
-:leveloffset: 0
-
-:leveloffset: 3
-include::topics/To_manage_Report_Menu_Folders.adoc[]
-:leveloffset: 0
-
-:leveloffset: 3
-include::topics/To_organize_reports_in_Report_Menus.adoc[]
+:leveloffset: 2
+include::report_menus.adoc[]
 :leveloffset: 0
 
