--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hardware_Reconfigure_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hardware_Reconfigure_Alert.adoc
@@ -13,12 +13,10 @@ Use a hardware reconfigure alert to detect changes to the amount of memory or th
 * From [label]#What to Evaluate#, select [label]#Hardware Reconfigured#. 
 * In [label]#Notification Frequency#, select how often you want to be notified if hardware reconfiguration is detected. 
 
-From [label]#Hardware Attribute#, select Number of CPUs.
-From the next dropdown, select [label]#Decreased#.
- 
+. From [label]#Hardware Attribute#, select Number of CPUs. From the next dropdown, select [label]#Decreased#.
++
+image::images/1973.png[]
 
-
-. image::images/1973.png[]			
 . After setting the parameters, select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process. 
 . Click btn:[Add]. 
