--- a/welcome/index.adoc
+++ b/welcome/index.adoc
@@ -4,38 +4,10 @@
 :data-uri:
 :icons:
 
-Welcome to ManageIQ documentation. Here you will find information and resources to help you learn about ManageIQ and its features. From getting started with creating your first application to using the advanced features, these resources provide information to set up and manage your ManageIQ environment.
+Welcome to the ManageIQ Documentation.
 
-
-[cols="2",frame="none",grid="cols"]
-|===
-
-
-a|link:../getting_started/overview.html[*Getting Started*]
-
-Describes the initial steps required to begin using ManageIQ and create your first application.
-
-a|link:../user_guide/overview.html[*User Guide*]
-
-Describes key concepts of ManageIQ with instructions on how to use ManageIQ.
-
-|===
-
-ifdef::manageiq,cfme[]
-== Deploying ManageIQ
-Looking for information on how to install and run this world-class Cloud Management Engine? You got it:
-
-* link:#[Topic 4]
-* link:#[Topic 5]
-* link:#[Topic 6]
-
-endif::[]
-ifdef::manageiq[]
-== Hacking on ManageIQ
-Interested in getting your hands dirty and making ManageIQ even better?
-
-* link:#[Topic 7]
-* link:#[Topic 8]
-* link:#[Topic 9]
-
-endif::[]
+== Need Help?
+* Check out the http://www.asciibinder.org/latest/welcome/[AsciiBinder documentation] to learn how to contribute.
+* Join our http://talk.manageiq.org[forum]
+* Find us on IRC at FreeNode, http://webchat.freenode.net/?randomnick=1&channels=manageiq&uio=d4[#manageiq] channel
+* Open an https://github.com/manageiq/manageiq_docs/issues[issue on GitHub]
