Fixed syntax errors during peer review.

--- a/doc-General_Configuration_Guide/Configuration.adoc
+++ b/doc-General_Configuration_Guide/Configuration.adoc
@@ -117,9 +117,9 @@ A selection of company tags is provided to you by default as samples. These can 
 * System tags are assigned automatically by CloudForms Management Engine.
 
 [NOTE]
-=======================
+======
 If you entered a Company Name under Configure → Configuration, then clicking on the Settings tab, then the Server your desired server, that name will appear on the tab instead of My Company.
-=========================
+======
 
 ====== Creating a Tag Category
 
@@ -132,9 +132,9 @@ To Create a Tag Category:
 image:2042.png[]
 * Use Name to create a short name that refers to category in the VMDB.
 [NOTE]
-===============
+======
 The Name and Single Value fields cannot be changed after the category has been added.
-==============
+======
 * Use Display Name to specify how you want to see the name of the category in the Console.
 * Use Description to type a brief explanation of how the category should be used. This shows when you try to add a value to the category.
 * Check Show in Console when you feel that the category is ready for use in the console. For example, you want to populate values for the category before exposing it to users.
@@ -203,9 +203,10 @@ evm2,Exclusions,Do not Analyze
 evm2,EVM Operations,Analysis Successful 
 rhel6,Department,Presales 
 rhel6,Department,Support
-----------------------
+--------------------
 +
 
+ 
 ====== Importing Tags for a Virtual Machine from a CSV File
 
 To Import Tags for a Virtual Machine from a CSV File:
@@ -216,10 +217,12 @@ To Import Tags for a Virtual Machine from a CSV File:
 . Click Browse to go to the location where the file is located.
 image:2044.png[]
 . Click Upload.
++
 [NOTE]
 ===========
 If there are any problems with the file, such as an incorrect column name, unknown virtual machine, unknown tag, or multiple values for a tag that should have only one, an error message will appear in the console for those records.
 ===========
++
 . Click Apply.
 
 ====== Importing Custom Values for Virtual Machines and Hosts
@@ -234,28 +237,24 @@ For the import to be successful, the file must be in the following format, with 
 
 *Virtual Machine Import Example*
 
-+
-----------------
+---------------
 name,custom_1
 Ecommerce,665432
 Customer,883452
 SQLSrvr,1090430
 Firewall,8230500
 ---------------
-+
 
 For virtual machines, the value for custom_1 will show in the VM Summary page as the Custom Identifier in the Properties area. All of the custom values will show in the Custom Fields area.
 
 *Host Import Example*
 
-+
------------------------
+----------------------
 hostname,custom_1,custom_2
 esx303.galaxy.local,15557814,19948399
 esxd1.galaxy.local,10885574,16416993
 esxd2.galaxy.local,16199125,16569419
 ----------------------
-+
 
 For hosts, the value for custom_1 will show in the Host Summary page as the Custom Identifier in the Properties area. All of the custom values will show in the Custom Fields area.
 
@@ -270,10 +269,12 @@ To Import Asset Tags for a Virtual Machine from a CSV File
 image:2045.png[]
 . Click Browse to go to the location where the custom variable file is located.
 . Click Upload.
++
 [NOTE]
 ===========
 If there are any problems with the file, such as an incorrect column name, unknown virtual machine or host, a message appears.
 ===========
++
 . Click Apply.
 
 ===== Registering and Updating CloudForms Management Engine
@@ -635,8 +636,9 @@ To Enable the snmpd and snmptrapd Daemons"
 ------------
 # service snmpd start
 # service snmptrapd start  
---------------
+------------
 +
+
 
 To Enable the Notifier Role:
 
@@ -770,11 +772,9 @@ Click Validate to verify your settings.
 
 ====== Trusted Forests
 
-======= Trusted Forest Settings
-
 If a user has group memberships in another LDAP Forest, then specify the settings to access the memberships in the trusted forest.
 
-======= Adding Settings for a Trusted Forest
+====== Adding Settings for a Trusted Forest
 
 To Add Settings for a Trusted Forest:
 
@@ -788,7 +788,7 @@ To Add Settings for a Trusted Forest:
 . Enter the LDAP Host Name, select a Mode, and enter an LDAP Port, Base DN, Bind DN, and Bind Password.
 . Click Save.
 
-======= External Authentication (httpd)
+====== External Authentication (httpd)
 
 When external authentication is enabled, users can log in to the CloudForms Management Engine appliance using their IPA server credentials. The appliance creates user accounts automatically and imports relevant information from the IPA Server.
 
@@ -842,7 +842,7 @@ If any of the following conditions are true, configuration fails:
 * The IPA server cannot reach the appliance by its FQDN
 * The time is not synchronized between the appliance and the IPA server
 * The IPA server admin password is entered incorrectly
-=============
+============
 *Reverting to Internal Database Authentication*
 
 To revert to internal database authentication, first configure authentication using the web interface, then using the console.
@@ -872,7 +872,7 @@ Press Enter.
 In addition to using the appliance console, external authentication can optionally be configured and un-configured using the appliance console command line interface.
 
 Appliance console CLI command and relevant options include:
-+
+
 --------------------
 /bin/appliance_console_cli --host <appliance_fqdn>
                            --ipaserver <ipa_server_fqdn>
@@ -881,16 +881,16 @@ Appliance console CLI command and relevant options include:
                            --ipapassword <ipa_server_password>
                            --uninstall-ipa
 --------------------
-+
---host::
+
+--host:
 
 updates the hostname of the appliance. If you performed this step using the console and made the necessary updates made to /etc/hosts if DNS is not properly configured, you can omit the --host option.
 
---iparealm::
+--iparealm:
 
 if omitted, the iparealm is based on the domain name of the ipaserver.
 
---ipaprincipal::
+--ipaprincipal:
 
 if omitted, defaults to admin.
 
@@ -998,7 +998,7 @@ Result:: During the restart, you are unable to access the server. When the resta
 
 Use Custom Logos to display your own logo in the corner of the console or on the CloudForms Management Engine login panel.
 
-======= Uploading a Custom Logo to the Console
+====== Uploading a Custom Logo to the Console
 
 To Upload a Custom Logo to the Console:
 
@@ -1014,7 +1014,7 @@ image:2071.png[]
 . Check Use Custom Logo Image to add the logo to your console.
 . Click Save.
 
-======= Customizing the Login Background
+====== Customizing the Login Background
 
 To Customize the Login Background:
 
@@ -1479,12 +1479,14 @@ image:2079.png[]
 * VM Analysis:: Displays VM Selection where you can choose to analyze All VMs, All VMs for Provider, All VMs for Cluster, All VMs for Host, A single VM, or Global Filters.
 * Template Analysis:: Displays Template Selection where you can choose to analyze All Templates, All Templates for Provider, All Templates for Cluster, All Templates for Host, A single Template, or Global Filters.
 * Host Analysis: Displays Host Selection where you can choose to analyze All Hosts, All Hosts for Provider, A single Host, or Global Filters.
++
 [NOTE]
 ==============
 You can only schedule host analyses for connected virtual machines, not repository virtual machines that were discovered through that host.
 Since repository virtual machines do not retain a relationship with the host that discovered them, there is no current way to scan them through the scheduling feature.
 The host is shown because it may have connected virtual machines in the future when the schedule is set to run.
 ==============
++
 * Cluster / Deployment Role Analysis:: Displays Cluster Selection where you can choose to analyze All Clusters, All Clusters for Provider, or A single Cluster.
 * Datastore Analysis:: Displays Datastore Selection where you can choose to analyze All Datastores, All Datastores for Host, All Datastores for Provider, A single Datastore, or Global Filters.
 * VM Compliance Check:: Displays VM Selection where you can choose to analyze All VMs, All VMs for Provider, All VMs for Cluster, All VMs for Host, A single VM, or Global Filters.
@@ -1500,7 +1502,8 @@ image:2080.png[]
 . Select a Starting Time based on a 24 hour clock in the selected Time Zone.
 . Click Add.
 
-====== Scheduling a Database Backup
+
+===== Scheduling a Database Backup
 
 To Schedule a Database Backup:
 
@@ -1556,7 +1559,7 @@ If you are using LDAP, but did not enable Get User Groups from LDAP in your serv
 Use all lowercase to be sure that the user can be found in the VMDB. For example, jdunn@acme.com when using User Principal Name, cn=Jack Dunn,ou=users,dc=acme,dc=com when using Distinguished Name (CN=<user>), or uid=JackDunn,ou=users,dc=acme,dc=com when using Distinguished Name (UID=<user>).
 Then, when logging in, the user would type either jdunn for User Principal Name or Jack Dunn for Distinguished Name. If the user is not defined in the VMDB, they will be denied access to CloudForms Management Engine. The password field will not be used.
 When the user logs in they should use their LDAP password.
-==============
+===============
 . Select a Group.
 . Click Add.
 
@@ -2293,20 +2296,22 @@ To Create a Region:
 . Enter Y to confirm.
 . The menu reappears after all processes are complete.
 . Choose Configure Database.
++
 [WARNING]
 ========
 Performing this action destroys any existing data and cannot be undone. Back up the existing database before proceeding. By default, new CloudForms Management Engine Appliances are assigned region 0.
 Do not use this number when creating a region as duplicating region numbers can compromise the integrity of the data.
-=======
+========
++
 . Enter a database region number that has not been used in your environment. Do not enter duplicate region numbers as this can corrupt the data.
 . Enter Y to confirm.
 . The menu reappears after all processes are complete.
 . Enter 13 to Start EVM Server Processes.
 . Enter Y to confirm.
 
-Result:: After a region is created, you can create subordinate regions as necessary and set up replication to the top level region.
+After a region is created, you can create subordinate regions as necessary and set up replication to the top level region.
 
-===== Replicating a Database
+==== Replicating a Database
 
 To Replicate a Database
 
@@ -2323,7 +2328,8 @@ To Replicate a Database
 . Click Validate to confirm that the VMDB is accessible.
 . Click Save.
 
-===== Enabling the Database Synchronization Role
+
+==== Enabling the Database Synchronization Role
 
 When you start the replication worker, all of the information in the subordinate database is sent to the top region (99). The worker also creates triggers so that future changes made to subordinate regions are
 sent automatically to the top region. 
@@ -2333,13 +2339,16 @@ To Enable the Database Synchronization Role:
 . Navigate to Configure → Configuration.
 . Click the Settings accordion and click Zones.
 . Click the Zone where the server is located and click the server name.
++
 [NOTE]
 ========
 Only enable database synchronization on subordinate servers with replication worker settings already configured. Do not enable more than one Database Synchronization role per region.
 ========
++
 . Click Server.
 . In the Server Control area, select Database Synchronization.
 . Click Save.
+
 
 ===== Scheduling a Database Backup
 
@@ -2437,29 +2446,29 @@ Appliance.
 +
 -------
 service evmserverd stop
-------
+-------
 +
 . Use pgadmin to change the password for your CloudForms Management Engine database (default is vmdb_production). If you do not have pgadmin, then you can change the password by running:
 +
 -------
 psql -U root -d vmdb_production
-------
+-------
 +
 * At the vmdb# prompt, type:
 +
 -----------
 ALTER USER root WITH PASSWORD 'newpassword';
----------
+-----------
 +
 * To exit psql, type:
 +
----------
+--------
 \q
 --------
 +
 . Run the following command to change the password in the configuration file that emserverd uses to access the server:
 +
---------
+-------
 /var/www/miq/vmdb/tools/fix_auth.rb --databaseyml --password newpassword
 -------
 +
@@ -2467,7 +2476,7 @@ ALTER USER root WITH PASSWORD 'newpassword';
 +
 ----------
 service evmserverd start
------------
+----------
 +
 . Verify that you can log in to the CloudForms Management Engine Console.
 
@@ -2478,7 +2487,7 @@ service evmserverd start
 * SSH into the appliance.
 * To stop the CloudForms Management Engine service, run the following command:
 +
----------
+--------
 service evmserverd stop      
 --------
 +
@@ -2506,7 +2515,7 @@ Replication Worker on the subordinate regions.
 * Disable the Database Synchronization Role.
 * Update the Replication Worker's password.
 * Restart the Database Synchronization Role.
-=============
+===========
 
 ===== Adding a New Appliance to an Existing Region with Non-default Password
 
@@ -2519,13 +2528,13 @@ Replication Worker on the subordinate regions.
 * Save the new database.yml.
 * Run the following command to change the password in the configuration file that emserverd uses to access the server:
 +
----------
+--------
 /var/www/miq/vmdb/tools/fix_auth.rb --databaseyml --password newpassword
 --------
 +
 . Restart the new worker appliance by typing:
 +
-------------
+-----------
 service evmserverd restart
 -----------
 +
