--- a/doc-General_Configuration_Guide/Settings_Overview.adoc
+++ b/doc-General_Configuration_Guide/Settings_Overview.adoc
@@ -1,4 +1,4 @@
-[settings-overview]
+[[settings-overview]]
 == Settings Overview
 
 To view or modify global settings for your appliance, hover over the +Configure+ menu and click the sub-tab for the setting to modify.
