--- a/doc-General_Configuration_Guide/Smart_Proxies.adoc
+++ b/doc-General_Configuration_Guide/Smart_Proxies.adoc
@@ -9,7 +9,7 @@ The embedded SmartProxy can analyze virtual machines that are registered to a ho
 The server comes with one SmartProxy version already available. It can also be installed on an ESX Server version 3.0.2, 3.5 or 4.
 
 [IMPORTANT]
-=========
+========
 Contact Red Hat before installing a new SmartProxy on an ESX Server.
 ========
 
@@ -29,13 +29,13 @@ To Enter Credentials and Operating System for the Target Host:
 
 . Navigate to Infrastructure → Hosts.
 . Select the host you want to edit.
-. Click [IMAGE] (Configuration), then [IMAGE] (Edit this item).
+. Click image:1847.png[] (Configuration), then image:1851.png[] (Edit this item).
 . In the Credentials box, click the Default tab and enter your login credentials.
 If you are using domain credentials, the format for User ID must be in the format of <domainname>\<username>.
 For ESX hosts, if SSH login is disabled for the default user, click the Remote Login tab and enter a user with remote login access.
-[IMAGE]
+image:2112.png[]
 [IMPORTANT]
-==============
+=============
 If the target is a Windows host, disconnect all network connections between the Windows proxy and the target.
 If an existing connection uses a different set of credentials than those set in the console, the installation may fail.
 =============
@@ -48,4 +48,5 @@ copied to a Windows proxy. That computer then installs the file to the
 target host. The Windows proxy is the same as when you select the Default
 Repository SmartProxy box located by navigating to Configure →
 Configuration, then clicking on the desired server, then the Server tab, and exploring the Server Control area.
+
 
