BZ1274581 - Inlcudes information about the Red Hat Access Insights tab.

--- a/doc-General_Configuration_Guide/master.adoc
+++ b/doc-General_Configuration_Guide/master.adoc
@@ -13,3 +13,4 @@ include::My_Settings.adoc[]
 include::Configuration.adoc[]
 include::Smart_Proxies.adoc[]
 include::About.adoc[]
+include::RH_Access_Insights.adoc[]
