--- a/doc-General_Configuration_Guide/Configuration.adoc
+++ b/doc-General_Configuration_Guide/Configuration.adoc
@@ -1030,7 +1030,7 @@ image:2073.png[]
 . Check Use Custom Login Image to add the logo to your console.
 . Click Save.
 
-======= Customizing the Login Panel Text
+====== Customizing the Login Panel Text
 
 To Customize the Login Panel Text:
 
